--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     background-color: pink;
 }
 
@@ -32,4 +32,4 @@ button{
     align-items: center;
     justify-content: center;
     font-size: 30px;
-}
+} */
