--- a/token.css
+++ b/token.css
@@ -1,20 +1,18 @@
-body{
-    background-color: gainsboro;
+*{
+    background-color: rgb(1, 1, 43);
 }
 h1{
-    color: rgb(88, 168, 200);
-    font-size: 50px;
+    color: deeppink;
+    font-size: 30px;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
-    /* text-align: center; */
 }
 .display{
 display: flex;
 justify-content: center;
-color:rgb(84, 84, 182);
-font-size: 30px;
-border: 1px solid blue;
-padding: 10px;
-margin: 100px 400px  ;
+color: deeppink;
+font-size: 50px;
+border: 1px solid pink;
+padding: 5px;
+margin: 100px 100px  ;
 }
